--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-This is your new Play application
-=================================
+Play Champagne App v2.0
 
-This file will be packaged with your application, when using `activator dist`.
+New structure for a faster App execution
